ZFS-6 arc_summary3 requires python3, which is not installed
Including arc_summary3 in the RPM package creates a dependency on python3.

Change-Id: Ic7f90d6a02be00a747a45010041ef209d34d8211

--- a/cmd/arc_summary/Makefile.am
+++ b/cmd/arc_summary/Makefile.am
@@ -1,1 +1,5 @@
-dist_bin_SCRIPTS = arc_summary.py arc_summary3.py
+# BEGIN CRAY
+# Python3 is not available, don't install the phython3-based command.
+#dist_bin_SCRIPTS = arc_summary.py arc_summary3.py
+dist_bin_SCRIPTS = arc_summary.py
+# END CRAY
