ZFS-10 Jenkins needs a mock environment for the ZFS build
In order for the Jenkins phase2 build script to work successfully, a
mock build environment must be established which has all the necessary
ZFS build dependencies installed.

--- a/config/rpm.am
+++ b/config/rpm.am
@@ -83,5 +83,5 @@ rpm-common:
 		--define "_tmppath $$rpmbuild/TMP" \
 		--define "_topdir $$rpmbuild" \
 		$(def) --rebuild $$rpmpkg || exit 1; \
-	cp $$rpmbuild/RPMS/*/* . || exit 1; \
+	cp $$rpmbuild/RPMS/*/* . || cp $$rpmbuild/RPMS/* . || exit 1; \
 	rm -R $$rpmbuild)
